doc: swago
